попытался в авторизацию - не сработало

--- a/prepros.config
+++ b/prepros.config
@@ -907,13 +907,16 @@
       {
         "file": "dev/scripts/main.js",
         "config": {
+          "autoCompile": true,
+          "customOutput": "dist\\main.min.js",
           "tasks": {
             "bundle-js": {
               "enable": true
+            },
+            "minify-js": {
+              "enable": false
             }
-          },
-          "customOutput": "dist\\main.min.js",
-          "autoCompile": true
+          }
         }
       },
       {
