list all subjects

--- a/prepros.config
+++ b/prepros.config
@@ -920,9 +920,20 @@
         }
       },
       {
+        "file": "dev/styles/allsubjects.scss",
+        "config": {
+          "autoCompile": false
+        }
+      },
+      {
         "file": "dev/styles/style.scss",
         "config": {
-          "customOutput": "dist\\style.min.css"
+          "customOutput": "dist\\style.min.css",
+          "tasks": {
+            "minify-css": {
+              "enable": false
+            }
+          }
         }
       }
     ]
