new db with many-to-manyu tables, fixed query for all subjects

--- a/prepros.config
+++ b/prepros.config
@@ -905,6 +905,12 @@
     },
     "files": [
       {
+        "file": "dev/scripts/loginScript.js",
+        "config": {
+          "compileImported": true
+        }
+      },
+      {
         "file": "dev/scripts/main.js",
         "config": {
           "autoCompile": true,
@@ -928,12 +934,7 @@
       {
         "file": "dev/styles/style.scss",
         "config": {
-          "customOutput": "dist\\style.min.css",
-          "tasks": {
-            "minify-css": {
-              "enable": false
-            }
-          }
+          "customOutput": "dist\\style.min.css"
         }
       }
     ]
