--- a/prepros.config
+++ b/prepros.config
@@ -934,7 +934,12 @@
       {
         "file": "dev/styles/style.scss",
         "config": {
-          "customOutput": "dist\\style.min.css"
+          "customOutput": "dist\\style.min.css",
+          "tasks": {
+            "minify-css": {
+              "enable": false
+            }
+          }
         }
       }
     ]
