UPDATE DB FIRSTLY, fix fonts and DB

--- a/prepros.config
+++ b/prepros.config
@@ -934,12 +934,7 @@
       {
         "file": "dev/styles/style.scss",
         "config": {
-          "customOutput": "dist\\style.min.css",
-          "tasks": {
-            "minify-css": {
-              "enable": false
-            }
-          }
+          "customOutput": "dist\\style.min.css"
         }
       }
     ]
