--- a/prepros.config
+++ b/prepros.config
@@ -345,10 +345,6 @@
       "png": {
         "quality": 90
       },
-      "postcss-import": {
-        "ignoreKeywords": [],
-        "sourceMap": false
-      },
       "postcss-preset-env": {
         "stage": 2,
         "browsers": [
@@ -458,6 +454,10 @@
         "resolveJsonModule": false,
         "esModuleInterop": false,
         "useDefineForClassFields": false
+      },
+      "postcss-import": {
+        "ignoreKeywords": [],
+        "sourceMap": false
       }
     },
     "fileTypes": {
@@ -471,7 +471,7 @@
         "tasks": [
           {
             "task": "dart-sass",
-            "enable": true
+            "enable": false
           },
           {
             "task": "autoprefixer",
