--- a/prepros.config
+++ b/prepros.config
@@ -471,7 +471,7 @@
         "tasks": [
           {
             "task": "dart-sass",
-            "enable": false
+            "enable": true
           },
           {
             "task": "autoprefixer",
@@ -935,6 +935,47 @@
         "file": "dev/styles/style.scss",
         "config": {
           "customOutput": "dist\\style.min.css"
+        }
+      },
+      {
+        "file": "js/addTeacher/add_select.js",
+        "config": {
+          "tasks": {
+            "bundle-js": {
+              "enable": true
+            }
+          },
+          "autoCompile": true
+        }
+      },
+      {
+        "file": "js/main.js",
+        "config": {
+          "tasks": {
+            "bundle-js": {
+              "enable": true
+            },
+            "minify-js": {
+              "enable": false
+            }
+          },
+          "autoCompile": true
+        }
+      },
+      {
+        "file": "styles/add.scss",
+        "config": {
+          "autoCompile": false
+        }
+      },
+      {
+        "file": "styles/style.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": false
+            }
+          }
         }
       }
     ]
