disabled button when no subjects, fix delete teacher icon acsess, delete subjects from specs and groups depends on $_GET[]

--- a/prepros.config
+++ b/prepros.config
@@ -76,15 +76,12 @@
       "remotePath": "",
       "timeout": 20000,
       "autoUpload": false,
-      "reuseConnection": true,
       "connectionType": "ftp",
-      "history": []
+      "history": [],
+      "reuseConnection": true
     },
     "packages": {
       "createPackageLock": true
-    },
-    "images": {
-      "preserveOriginal": true
     },
     "tasks": {
       "autoprefixer": {
@@ -984,6 +981,9 @@
           }
         }
       }
-    ]
+    ],
+    "images": {
+      "preserveOriginal": true
+    }
   }
 }
