clear / send button not work, if null list

--- a/prepros.config
+++ b/prepros.config
@@ -76,12 +76,15 @@
       "remotePath": "",
       "timeout": 20000,
       "autoUpload": false,
+      "reuseConnection": true,
       "connectionType": "ftp",
-      "history": [],
-      "reuseConnection": true
+      "history": []
     },
     "packages": {
       "createPackageLock": true
+    },
+    "images": {
+      "preserveOriginal": true
     },
     "tasks": {
       "autoprefixer": {
@@ -981,9 +984,6 @@
           }
         }
       }
-    ],
-    "images": {
-      "preserveOriginal": true
-    }
+    ]
   }
 }
